GH-8 implemented integration tests for account registration